<resources>


    <string name="chat_text">私信</string>
    <string name="tweets_text">推文</string>
    <string name="fans_text">粉丝</string>
    <string name="focus_text">关注</string>
    <string name="unfocus_text">取消</string>
    <string name="focus_text_btn">+  关注</string>
    <string name="unfocus_text_btn">取消关注</string>
    <string name="repeat_text">转推</string>
    <string name="star_text">个赞</string>

    <string name="message_focus">关注了你</string>
    <string name="message_star">点赞了你</string>
    <string name="message_comment">评论了你</string>
    <string name="message_prompt">\&#064;了你</string>

    <string name="error_message_delete">删除消息失败</string>


    <string name="error_game_url">比赛连接失败</string>
    <string name="error_game_none">比赛暂时没有直播</string>
    <string name="error_game_over">比赛已经结束了</string>

    <string name="error_location">获取位置失败</string>

    <string name="error_loginsso_qq_cancel">取消QQ授权</string>

    <string name="error_loginsso_weibo_cancel">取消新浪微博授权</string>

    <string name="error_loginsso_qq">QQ授权失败</string>
    <string name="error_loginsso_weibo">新浪微博授权失败</string>


    <string name="error_search_empty">请输入搜索关键字</string>

    <string name="success_image_save">保存成功</string>
    <string name="error_share">分享失败</string>
    <string name="error_image_save">保存失败</string>
    <string name="error_chat">请写些内容</string>
    <string name="error_comment">推文加载中</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_camera">打开相机失败</string>
    <string name="error_photo">请安装相册应用</string>
    <string name="error_star">点赞失败</string>


    <string name="menu_item_delete">删除图片</string>
    <string name="menu_item_save">保存图片</string>
    <string name="menu_item_share">分享图片</string>
    <string name="menu_item_tweet_share">分享</string>
    <string name="menu_item_tweet_star">点赞</string>
    <string name="menu_item_tweet_repeat">转发</string>
    <string name="menu_item_tweet_comment">评论</string>
    <string name="menu_item_web_copy">复制链接</string>
    <string name="menu_item_web_open">其他浏览器打开</string>

    <string name="menu_item_tweet_delete">删除推文</string>

    <string name="app_name">足球狗</string>

    <string name="app_share">更多精彩内容，点击下载</string>

    <string name="activity_nav">足球狗</string>
    <string name="activity_welcome">足球狗</string>


    <string name="activity_detail_tweet_comment">热门评论</string>
    <string name="activity_detail_tweet">推文详情</string>
    <string name="activity_detail_chat">私信详情</string>
    <string name="activity_detail_user">用户详情</string>

    <string name="activity_add_tweet">写推文</string>
    <string name="activity_add_team">添加球队</string>
    <string name="activity_detail_data">联赛数据</string>

    <string name="activity_contact">联系人</string>

    <string name="activity_search">搜索</string>
    <string name="activity_message">消息</string>

    <string name="activity_pro">战术分析</string>


    <string name="activity_image">图片</string>
    <string name="activity_sign">登录/注册</string>
    <string name="activity_setting">设置</string>
    <string name="activity_discover">发现附近</string>
    <string name="activity_help">帮助&#038;反馈</string>
    <string name="activity_about">关于足球狗</string>
    <string name="activity_web"></string>

    <string name="title_love">love</string>
    <string name="title_look">look</string>

    <string-array name="main_page_list">
        <item>关注</item>
        <!--<item>球队</item>//TODO:shadow-->
        <!--<item>直播</item>-->
        <!--<item>视频</item>-->
        <item>新闻</item>
        <!--<item>数据</item>-->
    </string-array>

    <string-array name="contact_page_list">
        <item>我的好友</item>
        <item>我的关注</item>
        <item>我的粉丝</item>
    </string-array>


    <string-array name="message_page_list">
        <item>全部</item>
        <item>私信</item>
        <item>评论</item>
        <item>\&#064;我</item>
        <item>关注</item>
        <item>点赞</item>
        <item>其他</item>
    </string-array>

    <string-array name="search_page_list">
        <item>推文</item>
        <item>用户</item>
    </string-array>

    <string-array name="team_page_list">
        <item>英超</item>
        <item>西甲</item>
        <item>德甲</item>
        <item>意甲</item>
        <item>法甲</item>
        <item>中超</item>
    </string-array>
    <string-array name="data_page_list">
        <item>英超</item>
        <item>西甲</item>
        <item>欧冠</item>
        <item>德甲</item>
        <item>意甲</item>
        <item>法甲</item>
        <item>中超</item>
        <item>亚冠</item>
    </string-array>

    <string-array name="data_category_page_list">
        <item>积分榜</item>
        <item>射手榜</item>
        <item>助攻榜</item>
        <item>赛程表</item>
    </string-array>

    <string-array name="user_detail_page_list">
        <item>推文</item>
        <item>图片</item>
    </string-array>

    <string-array name="tweet_detail_page_list">
        <item>详情</item>
        <item>评论</item>
    </string-array>

    <string-array name="tweet_comment_page_list">
        <item>评论</item>
    </string-array>

    <string-array name="image_list">
        <item>拍照</item>
        <item>相册</item>
    </string-array>

    <string-array name="gender_list">
        <item>男</item>
        <item>女</item>
    </string-array>


    <string-array name="op_list">
        <item>删除</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="menu_item_main">主页</string>
    <string name="menu_item_contact">好友</string>
    <string name="menu_item_message">消息</string>
    <string name="menu_item_search">搜索</string>
    <string name="menu_item_setting">设置</string>
    <string name="menu_item_help">帮助</string>
    <string name="menu_item_about">关于足球狗</string>


    <string name="empty">""</string>

    <string name="nav_header_name">立即登录</string>
    <string name="nav_header_sign"></string>

    <string name="sign_login_email_hint">邮箱</string>
    <string name="sign_login_email_error">请输入有效的邮箱地址</string>
    <string name="sign_login_password_hint">密码</string>
    <string name="sign_login_password_error">请输入字母或者数字（6-12位）</string>

    <string name="sign_login_login_text">登录</string>
    <string name="sign_login_register_text">注册</string>
    <string name="sign_login_forget_password_text">忘记密码了？</string>


    <string name="sign_complete_name_text">昵称</string>

    <string name="sign_complete_position_text">场上位置</string>

    <string name="sign_complete_sign_text">签名</string>
    <string name="sign_complete_complete_text">完成</string>

    <string name="sign_login_name_error">请输入昵称（2-20位）</string>

    <string name="sign_login_sign_error">请输入签名（40位以内）</string>

    <string name="sign_login_position_error">请输入你在足球场上的位置（2-4位）</string>


    <string name="gender_male_text">男</string>
    <string name="gender_female_text">女</string>


    <string name="detail_tweet_text_hint">添加评论...</string>
    <string name="detail_tweet_send_text">回复</string>

    <string name="detail_tweet_comment_text">更多评论</string>

    <string name="detail_chat_text_hint">聊一下？</string>
    <string name="detail_chat_send_text">发送</string>

    <string name="add_tweet_text_hint">有趣的事情呢？</string>
    <string name="add_tweet_send_text">推文</string>
    <string name="add_tweet_send_error">请写些内容</string>
    <string name="add_tweet_send_image_empty_error">请添加图片</string>
    <string name="add_tweet_send_image_error">添加图片出错</string>
    <string name="add_tweet_send_image_max_error">最多添加9张图片</string>

    <string name="add_team_ok_text">确定</string>


    <string name="search_input_hint">关键字？</string>

    <string name="welcome_begin">开始</string>

    <string name="check_personal_info">查看个人主页</string>
    <string name="people_nearby">周边好友</string>
    <string name="check_who_nearby">看看谁在附近...</string>

    <string name="live">直播</string>

    <string name="about_title">足球狗 1.0</string>

    <string name="about_text">
        为中国3000万足球迷而生的社交新闻应用。\n
        为可以定制自己喜欢的球队和球员的新闻。\n
        你可以发现周围同样在踢球的人，约球。\n
        你可以和你的朋友尽情的看球。\n
        不用在某些论坛里和别人撕逼。\n
        未来还有更多神秘彩蛋。。。\n
        勾搭专线：iamthefootball@qq.com\n
    </string>

    <string name="about_feedback">勾搭</string>

    <string name="setting_cover_text">足球封面</string>
    <string name="setting_tweet_text">我的推文</string>
    <string name="setting_contact_text">我的朋友</string>
    <string name="setting_avatar_text">我的头像</string>
    <string name="setting_email_text">邮箱</string>
    <string name="setting_name_text">昵称</string>
    <string name="setting_sign_text">签名</string>
    <string name="setting_position_text">场上位置</string>
    <string name="setting_gender_text">性别</string>
    <string name="setting_logout_text">退出登录</string>


    <string name="setting_name_hint">昵称？</string>
    <string name="setting_sign_hint">签名？</string>
    <string name="setting_position_hint">场上位置？</string>

    <string name="discover_title">发现</string>

    <string name="ok_text">确定</string>
    <string name="cancel_text">取消</string>

    <string name="success_forget_password">重置密码已经发到</string>
    <string name="loading_video">加载中...</string>

    <string name="from">来自</string>



    <!-- iconfont资源-->

    <string name="iconfont.at">&#xe607;</string>
    <string name="iconfont.comment">&#xe6dc;</string>
    <string name="iconfont.forward">&#xe6de;</string>

    <string name="iconfont.repeat">&#xe609;</string>

    <string name="iconfont.location">&#xe60a;</string>
    <string name="iconfont.face">&#xe60b;</string>
    <string name="iconfont.follow">&#xe60c;</string>

    <string name="iconfont.person">&#xe60d;</string>
    <string name="iconfont.star">&#xe6d9;</string>
    <string name="iconfont.discovery">&#xe60f;</string>

    <string name="iconfont.data">&#xe600;</string>
    <string name="iconfont.team">&#xe601;</string>
    <string name="iconfont.video">&#xe602;</string>

    <string name="iconfont.setting">&#xe6e6;</string>
    <string name="iconfont.send">&#xe604;</string>
    <string name="iconfont.add">&#xe605;</string>

    <string name="iconfont.notification">&#xe6dc;</string>
    <string name="iconfont.news">&#xe610;</string>
    <string name="iconfont.write.twitter">&#xe614;</string>

    <string name="iconfont.add.team">&#xe613;</string>
    <string name="iconfont.search">&#xe616;</string>

    <string name="iconfont.arrow.right">&#xe615;</string>
    <string name="iconfont.arrow.up">&#xe611;</string>
    <string name="iconfont.arrow.down">&#xe612;</string>

    <string name="iconfont.share">&#xe6dd;</string>

    <string name="iconfont.discover">&#xe6f0;</string>

    <string name="iconfont.more">&#xe6ed;</string>

    <string name="iconfont.empty">&#xe6e1;</string>

    <string name="iconfont.user.tweet">&#xe6e0;</string>
    <string name="iconfont.user.image">&#xe6df;</string>

    <string name="iconfont.tab.home">&#xe6f2;</string>
    <string name="iconfont.tab.love">&#xe6d9;</string>
    <string name="iconfont.tab.pro">&#xe6ee;</string>
    <string name="iconfont.tab.add">&#xe6d5;</string>
    <string name="iconfont.tab.search">&#xe6d6;</string>
    <string name="iconfont.tab.me">&#xe6d7;</string>

    <string name="iconfont.tab.home.select">&#xe6f1;</string>
    <string name="iconfont.tab.love.select">&#xe6e8;</string>
    <string name="iconfont.tab.pro.select">&#xe6ef;</string>
    <string name="iconfont.tab.add.select">&#xe6ec;</string>
    <string name="iconfont.tab.search.select">&#xe6eb;</string>
    <string name="iconfont.tab.me.select">&#xe6e7;</string>

</resources>
