<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_main"
            android:checked="true"
            android:icon="@drawable/ic_main"
            android:title="@string/menu_item_main" />
        <item
            android:id="@+id/nav_item_friend"
            android:icon="@drawable/ic_friend"
            android:title="@string/menu_item_friend" />
        <item
            android:id="@+id/nav_item_message"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_item_message" />
        <item
            android:id="@+id/nav_item_prompt"
            android:icon="@drawable/ic_prompt"
            android:title="@string/menu_item_prompt" />

        <item
            android:id="@+id/nav_item_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_item_search" />
    </group>

    <group android:id="@+id/nav_group_append">
        <item
            android:id="@+id/nav_item_setting"
            android:title="@string/menu_item_setting" />
        <item
            android:id="@+id/nav_item_help"
            android:title="@string/menu_item_help" />
        <item
            android:id="@+id/nav_item_about"
            android:title="@string/menu_item_about" />
    </group>


</menu>
