<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controllers.activities.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="1dp"
        android:theme="@style/AppTheme.AppBarLight">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupLight" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/about_title"
            android:textColor="@color/color_text_title"
            android:textSize="@dimen/text_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/about_text"
            android:textColor="@color/color_text_content"
            android:textSize="@dimen/text_content" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_huge"
            android:backgroundTint="@color/color_primary"
            android:text="@string/about_feedback"
            android:textColor="@color/color_text_highlight" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
