<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.abcxo.android.ifootball.models.User" />


        <import type="com.abcxo.android.ifootball.controllers.fragments.nav.SettingFragment.BindingHandler" />


        <variable
            name="handler"
            type="BindingHandler" />

        <variable
            name="user"
            type="User" />
    </data>

    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.activities.AboutActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarDark">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupLight" />

        </android.support.design.widget.AppBarLayout>

        <com.abcxo.android.ifootball.views.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{handler.onClickCover}"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerVertical="true"
                        android:singleLine="true"
                        android:text="@string/setting_cover_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/color_bg"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{user.cover}"
                        app:riv_corner_radius="@dimen/icon_radius"
                        tools:src="@drawable/bg_sign_complete" />


                </RelativeLayout>

                <View style="@style/Divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{handler.onClickAvatar}"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerVertical="true"
                        android:singleLine="true"
                        android:text="@string/setting_avatar_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop"
                        app:error="@{@drawable/ic_avatar}"
                        app:imageUrl="@{user.avatar}"
                        tools:src="@drawable/bg_sign_complete" />


                </RelativeLayout>

                <View style="@style/Divider" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/setting_email_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding"
                        android:gravity="center_vertical|right"
                        android:minHeight="48dp"
                        android:text="@{user.email}"
                        android:textColor="@color/color_text_content"
                        android:textSize="@dimen/text_title"
                        tools:text="243344@qq.com" />

                </LinearLayout>

                <View style="@style/Divider" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:onClick="@{handler.onClickName}"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/setting_name_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding"
                        android:gravity="center_vertical|right"
                        android:minHeight="48dp"
                        android:text="@{user.name}"
                        android:textColor="@color/color_text_content"
                        android:textSize="@dimen/text_title"
                        tools:text="超人第X" />

                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:onClick="@{handler.onClickSign}"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/setting_sign_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding"
                        android:gravity="center_vertical|right"
                        android:minHeight="48dp"
                        android:text="@{user.sign}"
                        android:textColor="@color/color_text_content"
                        android:textSize="@dimen/text_title"
                        tools:text="wewe" />

                </LinearLayout>
                <View style="@style/Divider" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:onClick="@{handler.onClickPosition}"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/setting_position_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding"
                        android:gravity="center_vertical|right"
                        android:minHeight="48dp"
                        android:text="@{user.position}"
                        android:textColor="@color/color_text_content"
                        android:textSize="@dimen/text_title"
                        tools:text="前锋" />

                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:onClick="@{handler.onClickGender}"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/setting_gender_text"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding"
                        android:gravity="center_vertical|right"
                        android:minHeight="48dp"
                        android:singleLine="true"
                        android:text="@{user.gender == User.GenderType.MALE?@string/gender_male_text:@string/gender_female_text}"
                        android:textColor="@color/color_text_content"
                        android:textSize="@dimen/text_title"
                        tools:text="男" />

                </LinearLayout>

                <View style="@style/Divider" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="@dimen/padding"
                    android:backgroundTint="@color/color_icon_red"
                    android:onClick="@{handler.onClickLogout}"
                    android:text="@string/setting_logout_text"
                    android:textColor="@color/color_text_highlight" />


            </LinearLayout>
        </com.abcxo.android.ifootball.views.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>
</layout>