<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.abcxo.android.ifootball.controllers.fragments.sign.LoginSignFragment.BindingHandler" />

        <variable
            name="handler"
            type="BindingHandler" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".controllers.activities.SignActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_sign_login" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.AppBarDark" />
        </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_big"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:padding="@dimen/padding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextInputLayout">


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_login_email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/padding"
                        android:singleLine="true"
                        android:textColor="@color/color_text_highlight"
                        android:textSize="@dimen/text_input" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/padding"
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_layout"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_login_password_hint"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/padding"
                        android:singleLine="true"
                        android:textColor="@color/color_text_highlight"
                        android:textSize="@dimen/text_input" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/action_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_layout"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/color_button_accent"
                        android:onClick="@{handler.onClickLogin}"
                        android:text="@string/sign_login_login_text"
                        android:textColor="@color/color_text_highlight" />

                    <Button
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/color_button_minor"
                        android:onClick="@{handler.onClickRegister}"
                        android:text="@string/sign_login_register_text"
                        android:textColor="@color/color_text_highlight" />
                </LinearLayout>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/action_layout"
                    android:layout_marginTop="@dimen/padding"
                    android:onClick="@{handler.onClickForgetPassword}"
                    android:text="@string/sign_login_forget_password_text"
                    android:textColor="@color/color_text_slightLight"
                    android:textSize="@dimen/text_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forget_password"
                    android:layout_marginTop="@dimen/padding_max"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="68dp"
                        android:layout_weight="1"
                        android:onClick="@{handler.onClickQQ}"
                        android:src="@drawable/ic_qq" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="68dp"
                        android:layout_weight="1"
                        android:onClick="@{handler.onClickWechat}"
                        android:src="@drawable/ic_wechat" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="68dp"
                        android:layout_weight="1"
                        android:onClick="@{handler.onClickWeibo}"
                        android:src="@drawable/ic_weibo" />
                </LinearLayout>


            </RelativeLayout>


        </RelativeLayout>

    </FrameLayout>
</layout>
